2006-06-23  Thang P Nguyen  <thang.p.nguyen@intel.com>

	* testsuite/buildok/tcp_test.stp: updated inet calls
	* testsuite/buildok/udp_test.stp: test udp tapset 

2006-06-22  Thang P Nguyen  <thang.p.nguyen@intel.com>

	* testsuite/buildok/tcp_test.stp: test tcp tapset

2006-06-16  Roland McGrath  <roland@redhat.com>

	* configure.ac, systemtap.spec.in: Bump version to 0.5.8.
	* configure: Regenerated.

	* systemtap.spec.in: Fix bundled_elfutils setting so builds can
	possibly work.  Add comment admonishing losers not to touch it.

	* aclocal.m4, Makefile.in: Regenerated with automake-1.9.6-2.

2006-06-16  Li Guanglei <guanglei@cn.ibm.com>

	* lket.in.5: update to reflect the latest changes
	to LKET

2006-06-15  Roland McGrath  <roland@redhat.com>

	* systemtap.spec.in: Require elfutils-0.121.

2006-06-14  Frank Ch. Eigler  <fche@elastic.org>

	* README: Add kernel.org blurb based on text from
	Chuck Ebbert <76306.1226@compuserve.com>.

2006-06-09  Li Guanglei <guanglei@cn.ibm.com>

	* parse.cxx, staptree.cxx, staptree.h, translate.cxx:
	delete lket_trace_extra
	* lket.5.in: delete the description of backtrace in
	LKET

2006-06-08  Thang P Nguyen  <thang.p.nguyen@intel.com>

	* testsuite/buildok/ioblock_test.stp: test ioblock

2006-06-05  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (dwflpp::express_as_string): New function.
	Extracted from dwflpp::literal_stmt_for_local() so that
	dwflpp::literal_stmt_for_return() could also call it.
	(dwflpp::literal_stmt_for_local): Portion extracted to create
	dwflpp::express_as_string().
	(dwflpp::literal_stmt_for_return): New function.  Adds support for
	new symbolic access ("$return") to return value in .return
	probes.  Fixes PR 1132.
	(target_variable_flavour_calculating_visitor::visit_target_symbol):
	Calls dwflpp::literal_stmt_for_return() when in a return probe and
	the variable name is "$return".
	(dwarf_var_expanding_copy_visitor::visit_target_symbol): Ditto.